--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
@@ -19,9 +19,9 @@
 <section class="my-5">
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-12">
+      <div class="col-lg-8 col-md-12" *ngIf="DetailsShown">
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-12" >
             <app-contact-card
             [userInfo]="userDetails"
             [jobInfo]="postedJobsDetails"
