--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -47,38 +47,32 @@
 									<div class="col-lg-12">
 										<div class="card profile-card">
 											<div class="d-flex">
-												<div class="pc-info">
+												<div class="col-lg-9">
 													<a [routerLink]="[ '/user/candidate-job-view/details' ]" [queryParams]="{id: matchingJob?.jobs?.id }"  class="text-capitalize" href="javascript:;">
 														<h5>{{matchingJob?.jobs?.title}} <small></small></h5>
 													</a>
 													<h6 class="mb-0 text-capitalize">
 														{{matchingJob?.jobs?.city +', ' +matchingJob?.jobs?.state+', ' +matchingJob?.jobs?.country}}
-														<!-- {{matchingJob?.jobs?.city ? matchingJob?.jobs?.city : ''}}
-														{{matchingJob?.jobs?.state ?  matchingJob?.jobs?.state : ''}}
-														<span class="text-uppercase">
-															{{matchingJob?.jobs?.country ? ', ' + matchingJob?.jobs?.country : ''}}
-														</span> -->
+														
 													</h6>
-													<form class="form-inline">
-														<!-- <a href="javascript:;" class="mr-3" data-toggle="modal" data-target="#matchpostModal">
-														  <small><i class="fab fa-buffer"></i> View Other Matches</small>
-														</a> -->
-													</form>
+													<h6 class="mt-1 text-capitalize">
+														{{matchingJob?.jobs?.company_name }}
+													</h6>
+													<div style="position: initial !important;"class="matchs-info " [ngClass]="isMultipleMatches ? 'd-none' : ''" >
+														<button (click)="onShowMatches($event)" id="matchBtnVal" class="matchBtn btn-sm btn btn-fltr btn-light btn-fltr-active"><img src="assets/images/matchs-icon.png" width="16px"> Matches </button>
+														<button (click)="onShowMissing($event)" id="missBtnVal" class="missBtn btn-sm btn btn-fltr btn-light"><img src="assets/images/missing-icon.png" width="15px" class="ml-2"> Missing </button>
+														<!-- <button (click)="onReset()" class="btn btn-sm btn-light ml-1">
+															<i class="fas fa-sync"></i>
+														</button> -->
+													</div>
 												</div>
-												<div class="pc-btn">
+												<div class="col-lg-3">
 													<a class="btn btn-outline-blue btn-sm text-right" href="javascript:;" (click)="onToggleJDModal(true,matchingJob?.jobs?.description)">	
 													<i class="fas fa-file-alt"></i> Description</a>
 												</div>
 											</div>
 										</div>
-										<div class="matchs-info " [ngClass]="isMultipleMatches ? 'd-none' : ''" >
-											<button (click)="onShowMatches($event)" id="matchBtnVal" class="matchBtn btn-sm btn btn-fltr btn-light btn-fltr-active"><img src="assets/images/matchs-icon.png" width="16px"> Matches </button>
-											<button (click)="onShowMissing($event)" id="missBtnVal" class="missBtn btn-sm btn btn-fltr btn-light"><img src="assets/images/missing-icon.png" width="15px" class="ml-2"> Missing </button>
-											<!--<button (click)="onShowMore()" class="moreBtn btn btn-sm btn-light"><img src="assets/images/info-icon.png"  width="16px">More Skills </button>-->
-											<button (click)="onReset()" class="btn btn-sm btn-light ml-1">
-												<i class="fas fa-sync"></i>
-											</button>
-										</div>
+										
 									</div>
 									<!--Body Sec-->
 									<div class="col-lg-12 info" [ngClass]="isMultipleMatches ? 'mt-0' : 'mt-0'">
